GNOME Bugzilla – Bug 616851
Gtk-CRITICAL **: gtk_misc_set_alignment: assertion `GTK_IS_MISC (misc)' failed
Last modified: 2010-05-06 01:47:51 UTC
Getting those warnings when starting Yelp and Inkscape (which spams a lot of them). I took a look at Yelp's code and created a minimal example that triggers the warning. Source and backtrace attached. Sorry if this is rather a problem with those applications than GTK.
Created attachment 159602 [details] backtrace of minimal_example
Created attachment 159603 [details] full backtrace of minimal_example
Created attachment 159605 [details] minimal_example.c
Created attachment 159627 [details] [review] Only a GtkMisc widget should be passed to gtk_tool_button_new() gtktoolbutton code assumes that the GtkWidget passed to gtk_tool_button_new() is a GtkMisc object.
Comment on attachment 159627 [details] [review] Only a GtkMisc widget should be passed to gtk_tool_button_new() commit b8ec73a52fe3dc3012db78f45bfcafa2cb3e14ae
This problem has been fixed in the development version. The fix will be available in the next major software release. Thanks Hernando for your detailed bug report.
Also, committed to the stable 2.20 brach in commit 500b9dfe3adf996bf1c758a09358f72f5ff384ba
Thanks for your quick response! I'm afraid my report wasn't detailed enough. Just checked Inkscape backtraces (there are 284 of those warnings until the main window comes up) and they don't use gtk_tool_button_new(). Some use gtk_tool_button_set_icon_widget(). I'll try to dig through all backtraces and attach the unique ones.
Created attachment 159638 [details] 8 unique backtraces from starting Inkscape
Reopening for latest comments
This commit should fix this issue: http://git.gnome.org/browse/gtk+/commit/?id=ba3e997daea267b100988ecd7c6d0767c334dfbc Thanks Hernando for your bug report.