Only a GtkMisc widget should be passed to gtk_tool_button_new()

Reported by Hernando Torque here:
https://bugzilla.gnome.org/show_bug.cgi?id=616851